// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature renders checkmark emoji 1`] = `
<div
  className="css-pat51 css-vlxvfg"
>
  <Checkmark
    reasonProps={
      Array [
        Array [
          "Checkmark",
          [Function],
          Array [
            0,
          ],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          0,
          [Function],
          0,
        ],
      ]
    }
  />
  <h3>
    A feature
  </h3>
</div>
`;

exports[`Feature renders soon emoji 1`] = `
<div
  className="css-pat51 css-vlxvfg"
>
  <Soon
    reasonProps={
      Array [
        Array [
          "Soon",
          [Function],
          Array [
            0,
          ],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          [Function],
          0,
          [Function],
          0,
        ],
      ]
    }
  />
  <h3>
    A feature
  </h3>
</div>
`;
